--- a/src/Interfaz/AdGeneralInicio.form
+++ b/src/Interfaz/AdGeneralInicio.form
@@ -76,11 +76,11 @@
                           <Component id="jFCamId" min="-2" pref="176" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="246" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="211" max="-2" attributes="0"/>
                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="118" pref="272" max="32767" attributes="0"/>
+                  <EmptySpace min="198" pref="227" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -115,7 +115,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Camarero"/>
+            <Property name="text" type="java.lang.String" value="Administrador General"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jFCamId">
